# Raytracer

./: .gitignore  Cargo.toml  README.md  basic.json  config.json  raytracing_perf(2022-03-03.00-11-34).opt
scenes/: scene_one.json  scene_two.json
src/: aabb.rs  bvh.rs  camera.rs  config.rs  debug_gui.rs  gui.rs  hit.rs  main.rs  materials.rs  old_main.rs  ray.rs  raytrace.rs  scene.rs  scene_gerenators.rs  shapes.rs  vec3.rs  world.rs
