[package]
name = "raytracer"
version = "0.1.0"
authors = ["Sagrel <Sagrel@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "*"
rayon = "*"
image = "*"
indicatif = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[profile.release]
debug = 1