[package]
name = "raytracer"
version = "0.1.0"
authors = ["Sagrel <Sagrel@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
image = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
time = "0.3.17"
glam = { version = "*", features = ["serde", "rand", "fast-math"] }
nanorand = "0.7.0"
pixels = "*"
winit = "*"
winit_input_helper = "*"
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"

[dev-dependencies]
easy-gltf = "*"

[profile.release]
debug = 1
#lto = true
opt-level =  3
overflow-checks = false 

[profile.dev]
opt-level =  1
overflow-checks = false 

[profile.dev.package."*"]
opt-level = 3

